Fixed module dropdown layout issues

--- a/client/src/componentStyles/ModuleCard.css
+++ b/client/src/componentStyles/ModuleCard.css
@@ -17,6 +17,8 @@
 }
 
 .module-code {
+  position: relative;
+  z-index: 10;
   color: white;
   background-color: #4b0082;
 
@@ -32,9 +34,6 @@
   margin-bottom: -60px;
 
   padding: 10px;
-
-  z-index: 1;
-
 }
 
 .module-title {
@@ -63,7 +62,6 @@
   width: 100%;
 
   padding: 25px;
-
 }
 
 .dropdown-box {
@@ -78,7 +76,6 @@
   padding: 16px;
   font-size: 16px;
   border: none;
-  z-index: 9999;
   margin: 0 auto;
   cursor: pointer;
 
@@ -88,41 +85,38 @@
   min-width: 44px;
 }
 
+.module-title-dropdown-row {
+    position: relative;
+  }
 
-.dropbtn:hover,
 .dropbtn:focus {
   background-color: #2980b9;
 }
 
-.dropdown {
-  position: relative;
-  display: block;
-}
 
 .dropdown-content {
   position: absolute;
   display: block;
-  top: 140px;
+  left: 40px;
+  top: 120px;
   border-radius: 20px;
   background-color: #f1f1f1;
-  width: 30vw;
+  min-width: 220px;
+  width: 80%;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  z-index: 9999;
 }
 
-.dropdown-content a {
+.dropdown-link{
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  z-index: 100;
 }
 
 .dropdown-content a:hover {
   background-color: #ddd;
-}
-
-.show {
-  display: block;
 }
 
 @media (min-width: 768px) {
@@ -139,6 +133,7 @@
     width: 95%;
 
     margin: 10px auto;
+    position: relative;
 
     padding: 0;
   }
@@ -156,12 +151,11 @@
     margin-right: -30px;
 
     padding: 25px;
-
-    z-index: 1;
   }
 
   .module-title {
     margin: auto 30px;
+    width: 70%;
   }
 
   .module-title-dropdown-row {
@@ -169,7 +163,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    gap: 16px;
+    position: relative;
   }
 
   .module-info {
@@ -183,13 +177,6 @@
     width: 60vw;
 
     padding: 25px;
-
-    z-index: 0;
-  }
-
-  .dropdown-box {
-    display: flex;
-    justify-content: center;
   }
 
   .dropdown-btn {
@@ -197,24 +184,21 @@
     font-size: 16px;
   }
 
-  .dropdown {
-    position: relative;
-    min-width: 120px;
-    margin-left: 16px;
-  }
-
-  .dropdown-content {
-    display: block;
-    position: absolute;
-    top: 50px;
-    right: -25px;
-    border-radius: 20px;
-    width: 68vw;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 100;
-  }
-
   .dropdown-link {
     padding: 12px 16px;
   }
+
+  .dropdown-content {
+    position: absolute;
+    display: block;
+    left: 10px;
+    top: 70px;
+    margin-top: 8px;
+    border-radius: 20px;
+    background-color: #f1f1f1;
+    min-width: 220px;
+    width: 100%;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 9999;
+}
 }
